<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/linerLayout1"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/playerName"
            android:id="@+id/playerNameTxt"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/balance"
            android:id="@+id/balance_txtv"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="102dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/moveTextView"
            android:id="@+id/move_txt"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="236dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp" />
    </RelativeLayout>
</LinearLayout>